--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
 #root {
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Asegura que ocupe todo el alto de la pantalla */
+    min-height: 100vh; 
+    
   }
   
 
