--- a/src/componentes/CartWidget/CartWidget.css
+++ b/src/componentes/CartWidget/CartWidget.css
@@ -1,13 +1,24 @@
-div{
+.div-cartwidget{
     display: flex;
-    flex-direction: row;
+    flex-direction: row;    
+    margin-right: 10px;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
+    font-size: 2rem;
+    
+    span{
+        color: aliceblue;
+        font-size: 1.5rem;
+    }
 }
 
-img{
-    max-width: 50px;
-    text-align: center;
-    margin: auto;
-    padding: 1rem;
+.i-cart{
+    color: aliceblue;
+    font-size: 2rem;
 }
+
+.i-cart:hover{
+    color:chocolate
+}
+
+
