--- a/src/componentes/Faq/Faq.css
+++ b/src/componentes/Faq/Faq.css
@@ -1,12 +1,92 @@
-/* Contenedor principal */
-.contenedor_faq {
-    display: flex;
-    flex-direction: column;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+body {
+  
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 20px;
 }
 
+.faq-main{
+  width: 100%;
+  text-align: center;
+
+  img {
+    width: 10%;
+
+  }
+}
+
+.faq-container {
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.faq-secondDiv{
+  text-align: center;
+  background-color: rgb(137, 141, 141);
+  border-radius: 20px;
+}
+
+.faq-button{
+  width: 25%;
+  margin: 5px;
+  font-family: graduate;
+}
+
+h1 {
+  text-align: center;
+  color: #333;
+}
+
+.faq-item {
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.faq-question {
+  background-color: #007bff;
+  color: white;
+  padding: 15px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+  font-size: 18px;
+  outline: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.faq-question:hover {
+  background-color: #0056b3;
+}
+
+.faq-answer {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  background-color: #f9f9f9;
+  padding: 0 15px;
+  border-left: 4px solid #007bff;
+  border-radius: 5px;
+}
+
+.faq-answer.open {
+  max-height: 100px; 
+}
+
+.faq-answer p {
+  padding: 10px 0;
+  margin-top: 10px;
+  color: #333;
+  font-family: graduate;
+}
+
+.parrafo-faq{
+  margin-top: 15px;
+  margin-bottom: 15px;
+
+}
